--- a/AdditionalEvents.html
+++ b/AdditionalEvents.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/global.css">
+  <link rel="stylesheet" type="text/css" href="styles/AccordianStyle.css">
+  <script defer src="source/code.js"></script>
   <title>Responsive, Static Website</title>
 </head>
 <body>
@@ -12,34 +14,42 @@
       <h1>Calgary Events</h1>
       <h3>Discover the beauty that Calgary has to offer while having fun</h3>
   </section>
-
-      <section id="content" class="container content-container">
-        <div class="Market-Link">
-          <h2>Why Calgary?</h2>
-          <p>Calgary is renowned for its world-class events, including the Calgary Stampede, an iconic rodeo and western festival attracting millions of visitors annually, 
-            and GlobalFest, a multicultural extravaganza featuring international fireworks competitions and cultural showcases. 
-            Outdoor enthusiasts can explore the city's extensive network of parks and trails, with events such as the Lilac Festival and ziplining at Canada Olympic Park offering unique experiences in Calgary's urban and natural landscapes. 
-            Whether you're a local or a visitor, Calgary's dynamic events calendar promises excitement, entertainment, and unforgettable memories throughout the year.  </p>
-        </p>
-        </div>
-        <div>
-          <img class="content-image" src="Assets/Calgary_Tower_Content.jpg"></img>
-        </div>
+ 
+  <section id="accordian" class="container accordion-container">
+    <button class="accordion">Growers</button>
+    <div class="panel">
+      <p>Supporting local farmers/Growers promotes food security, sustains local economies, and fosters community resilience by ensuring fresh,
+        nutritious produce and supporting small-scale agriculture. It also reduces carbon footprint by minimizing transportation and 
+        encourages sustainable farming practices.</p>
+    </div>
+    
+    <button class="accordion">Crafters</button>
+    <div class="panel">
+      <p> Supporting local crafters fosters creativity and preserves cultural heritage while bolstering the local economy. 
+        By purchasing handmade goods, you contribute to the uniqueness of your community and directly support artisans' livelihoods, 
+        promoting a vibrant and diverse cultural landscape.</p>
+    </div>
+    
+    <button class="accordion">Makers</button>
+    <div class="panel">
+      <p> </p>
+    </div>
   </section>
+
  
   <section id="footer" class="footer-container">
     <div class="block footer-block">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d321200.71227947116!2d-114.41747661991604!3d51.02759155127005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537170039f843fd5%3A0x266d3bb1b652b63a!2sCalgary%2C%20AB!5e0!3m2!1sen!2sca!4v1710868455463!5m2!1sen!2sca" width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
    </div>
     <div class="block footer-block">
-      <ul>
-      <li><a href="index.html"> Home </a>
-      </li>
-      <li><a href= "Top9Events.html"> Top 9 Events </a>
-      </li>
-      <li><a href="AdditionalEvents.html"> Additional Events </a>
-      </li>
-    </ul>
+        <ul>
+            <li><a href="index.html"> Home </a>
+            </li>
+            <li><a href= "Top9Events.html"> Top 9 Events </a>
+            </li>
+            <li><a href="AdditionalEvents.html"> Additional Events </a>
+            </li>
+        </ul>
     </div>
     <div class="block footer-block" style="max-width: 25%">
     <p>  
