Entering Content and css styling

--- a/AdditionalEvents.html
+++ b/AdditionalEvents.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/global.css">
   <link rel="stylesheet" type="text/css" href="styles/AccordianStyle.css">
-  <script defer src="source/code.js"></script>
   <title>Responsive, Static Website</title>
 </head>
 <body>
@@ -14,25 +13,32 @@
       <h1>Calgary Events</h1>
       <h3>Discover the beauty that Calgary has to offer while having fun</h3>
   </section>
- 
+  <h1>Additional Events</h1>
   <section id="accordian" class="container accordion-container">
-    <button class="accordion">Growers</button>
+    <button class="accordion">Festivals 2024</button>
     <div class="panel">
-      <p>Supporting local farmers/Growers promotes food security, sustains local economies, and fosters community resilience by ensuring fresh,
-        nutritious produce and supporting small-scale agriculture. It also reduces carbon footprint by minimizing transportation and 
-        encourages sustainable farming practices.</p>
+      <p>Calgary's thriving arts community showcases its talent through events like the Calgary International Film Festival and the Calgary 
+        Folk Music Festival. Also brings around big names in country at Country Thunder, it is an electrifying country music festival that 
+        brings together top artists, passionate fans, and a lively atmosphere for a weekend of unforgettable performances and camaraderie.
+    </p>
+    <a href="https://www.visitcalgary.com/things-to-do/stories-from-calgary/festivals-in-calgary"></a>
     </div>
     
-    <button class="accordion">Crafters</button>
+    <button class="accordion">Concerts 2024</button>
     <div class="panel">
-      <p> Supporting local crafters fosters creativity and preserves cultural heritage while bolstering the local economy. 
-        By purchasing handmade goods, you contribute to the uniqueness of your community and directly support artisans' livelihoods, 
-        promoting a vibrant and diverse cultural landscape.</p>
+      <p> The Coke Stage at the Calgary Stampede is a pulsating hub of live entertainment, featuring an eclectic lineup of 
+          musical acts that captivate audiences with their dynamic performances and energetic atmosphere. 
+      </p>
+      <a href="https://www.ticketmaster.ca/discover/concerts/calgary"></a>
     </div>
     
-    <button class="accordion">Makers</button>
+    <button class="accordion">Dining Experience</button>
     <div class="panel">
-      <p> </p>
+    <p> A popular trend that happens year-round is Dining under the starts, a dinning experience where are 
+        in a temperature controlled transparent igloo where you can see the night sky while dining with various restaurants.
+    </p>
+    <a href="https://bvrrestaurant.com/dome-dining/romantic-dome-dining/"></a>
+    <a href="https://www.albertamamas.com/dinner-under-the-stars-in-calgary/"></a>
     </div>
   </section>
 
