--- a/Top9Events.html
+++ b/Top9Events.html
@@ -17,161 +17,160 @@
   <section class="container">
     <ul class="card-container">
       <li class="card">
-        <img src="assetslab3/Basenji-min.jpg" alt="Basenji">
+        <img src="Assets/Rafters_float_the_bow.jpg" alt="people floating down a river on tubes">
         <div class="card-content">
           <h3 class="subheader">
-            Hypoallergenic Dogs
+            Activity
           </h3>
           <h4 class="header">
-            Basenji
+            Float the Bow 
+        </h4>
+          <p class="paragraph">
+            Floating on the Bow River in Calgary offers a refreshing and scenic way to experience the city's natural beauty. Participants typically rent 
+            inflatable rafts, tubes, or kayaks and leisurely float along the river, taking in views of  downtown Calgary, lush riverbanks, and nearby parks.
+        </div>
+      </li>
+      <li class="card">
+        <img src="Assets/Bucking_Bronco_Stampede.jpg" alt="Labradoodle">
+        <div class="card-content">
+          <h3 class="subheader">
+           Activity/Shopping/Entertainment/Food
+          </h3>
+          <h4 class="header">
+            Calgary Stampede
           </h4>
           <p class="paragraph">
-            "Cheerful and inquisitive, Havanese dogs flaunt glossy, lengthy coats that come in a myriad of colors. </br> 
-            If you allow their low-shedding fur to grow long, they can resemble regality itself, especially if carried around like the </br>
-            self-perceived monarchs they fancy themselves to be. And they're good boi's"</br>
+            The Calgary Stampede is one of the largest and most iconic rodeo and western festivals in the world, held annually.
+            Attracts over a million visitors each year. It features a wide array of events and attractions, 
+            including professional rodeo competitions, chuckwagon races, agricultural exhibits, live music concerts, carnival rides, 
+            and a variety of food vendors offering everything from traditional western fare to international cuisine, parades, fireworks display, 
+            and cultural showcases
           </p>
         </div>
       </li>
       <li class="card">
-        <img src="assetslab3/labradoodle-dog-breed-min.jpeg" alt="Labradoodle">
+        <img src="Assets/outdoor_festival_LilacFest.jpg" alt="Crowds shopping at an outdoor Lilac Festival">
         <div class="card-content">
           <h3 class="subheader">
-            Hypoallergenic Dogs
+            Shopping/Entertainment/Food
           </h3>
           <h4 class="header">
-            Labradoodle
+            4th Street Lilac Festival
           </h4>
           <p class="paragraph">
-            "is a crossbreed dog created by crossing a Labrador Retriever and a Standard or Miniature Poodle.<br/>
-            Labradoodles were intended to be a good choice for people with canine dander allergies."<br/>
+            The Lilac Festival in Calgary is an annual event held in late May that celebrates the arrival of spring and showcases 
+            the city's vibrant community spirit. It typically features live music, food vendors, artisans, and various family-friendly 
+            activities along 4th Street SW, which is transformed into a bustling pedestrian promenade for the day. The festival's 
+            centerpiece is the blooming of thousands of lilac bushes that line the street
           </p>
         </div>
       </li>
       <li class="card">
-        <img src="assetslab3/Chinese-Crested-min.jpg" alt="Chinese-Crested">
+        <img src="Assets/fireworks_global_fest.jpg" alt="people watching Fireworks display over a pond">
         <div class="card-content">
           <h3 class="subheader">
-            Hypoallergenic Dogs
+            Entertainment/Food
           </h3>
           <h4 class="header">
-            Chinese Crested
+            Global Fest
           </h4>
           <p class="paragraph">
-            "The Chinese Crested is a distinctly identifiable breed, characterized by its plumy tail and paws.<br/>
-            If pet hair is an issue for you, these hairless dogs could be the perfect companions.<br/>
-            They won't trigger allergies as the only places they have hair are their paws, tail, and head."<br/>
+            GlobalFest in Calgary is an annual multicultural festival that celebrates cultural diversity through music, food, and 
+            fireworks. Held over several evenings in late August. explore pavilions showcasing the music, dance, and cuisine of different 
+            countries, providing an immersive experience in global culture.international fireworks competition, where teams from different countries 
+            compete to create stunning pyrotechnic displays synchronized with music.
           </p>
         </div>
       </li>
       <li class="card">
-        <img src="assetslab3/Poodle-min.jpg" alt="Poodle">
+        <img src="Assets/zipliner_cop.jpg" alt="Person swinging down a zipline">
         <div class="card-content">
           <h3 class="subheader">
-            Hypoallergenic Dogs
+            Activity
           </h3>
           <h4 class="header">
-            Poodle
+            Zipline at Canada Olympic Park
           </h4>
           <p class="paragraph">
-            "Every variety of poodles, encompassing standard, toy, and miniature, are classified as hypoallergenic, <br/>
-            offering you an assortment of choices for your canine companion." <br/>
+            The zipline at Canada Olympic Park offers an exhilarating experience for adventure seekers visiting.
+            Located at the site of the 1988 Winter Olympics, the zipline allows participants to soar above the park's 
+            iconic ski jumps and stunning mountain scenery. The experience provides breathtaking views of the surrounding 
+            landscape while delivering an adrenaline rush. 
           </p>
         </div>
       </li>
       <li class="card">
-        <img src="assetslab3/Miniature-Schnauzer-min.jpg" alt="Minature-Schnauzer">
+        <img src="Assets/Polar_bear_zoo.jpg" alt="Polar Bear walking around an enclosure">
         <div class="card-content">
           <h3 class="subheader">
-            Hypoallergenic Dogs
+            Activity/Entertainment
           </h3>
           <h4 class="header">
-            Minature-Schnauzer
+            Polar Bear Exhibit at the Calgary Zoo
           </h4>
           <p class="paragraph">
-            “Renowned as the most favored breed among Schnauzers, these vigilant guardians are an excellent miniaturized choice for <br/>
-            Schnauzer enthusiasts. They maintain the characteristic earnest demeanor of their bigger kin but within a more petite form." <br/>         
+            The polar bear exhibit at the Calgary Zoo provides visitors with an immersive experience into the Arctic habitat of 
+            these magnificent creatures that opened in late 2023. It features a spacious enclosure designed to resemble the natural
+            environment of polar bears, complete with rocky terrain, pools for swimming, and ample space for exploration. 
+            Visitors can observe polar bears up close as they swim, play, and interact with each other.
           </p>
         </div>
       </li>
       <li class="card">
-        <img src="assetslab3/Yorkshire-Terrier-min.jpg" alt="Yorkshire Terrier">
+        <img src="Assets/Veg_stand_farmers_market.jpg" alt="Person buying vegetables from a farmers market stall">
         <div class="card-content">
           <h3 class="subheader">
-            Hypoallergenic Dogs
+            Shopping/Entertainment/Food
           </h3>
           <h4 class="header">
-            Yorkshire Terrier
+            Farmers Markets
           </h4>
           <p class="paragraph">
-            “Adorable Yorkies may easily nestle into handbags and laps, but don't be fooled by their diminutive stature - <br/>
-            they're full of personality. The fine texture of their hair closely resembles that of human hair, <br/>
-            making it less likely to trigger sneezing”.<br/>
+            The farmers' markets in Calgary offer a diverse and vibrant shopping experience for residents and visitors alike. 
+            These markets typically feature a wide variety of fresh produce, locally sourced meats, artisanal cheeses, baked goods, 
+            handmade crafts, and unique culinary treats.The farmers' markets in Calgary often take place year-round, with indoor and outdoor 
+            locations available, allowing people to enjoy fresh, seasonal goods regardless of the weather. 
           </p>
         </div>
       </li>
       <li class="card">
-        <img src="assetslab3/Portuguese-Water-Dog-min.jpg" alt="Portuguese Water Dog">
+        <img src="Assets/Horse_pulling_carriage_winter_Heritage_Park.jpg" alt="Horse Pulling a carriage in the winter">
         <div class="card-content">
           <h3 class="subheader">
-            Hypoallergenic Dogs
+            Activity/Entertainment/Food/Shopping
           </h3>
           <h4 class="header">
-            Portuguese Water Dog
+            Heritage Park
           </h4>
           <p class="paragraph">
-            “These medium-sized fluffy creatures might be familiar to you, given that "First Dogs" <br/>
-            Sunny and Bo Obama helped catapult the wavy-coated Portuguese water dogs into the limelight.<br/> 
-            adaptable to living in apartments for those in more compact accommodations.”<br/>
+            Heritage Park in Calgary is a living history museum that offers visitors a glimpse into Western Canada's past. 
+            Spread over 127 acres, the park features over 180 exhibits and attractions, including historical buildings, 
+            costumed interpreters, and vintage vehicles. Visitors can explore various aspects of pioneer life, from the early days of 
+            fur trading and indigenous cultures to the settlement of Western Canada in the late 19th and early 20th centuries. 
+            Highlights include a working steam train, a recreated frontier town with shops and businesses, a First Nations encampment, 
+            and a vintage midway with rides and games. 
           </p>
         </div>
       </li>
       <li class="card">
-        <img src="assetslab3/Shih-Tzu-min.jpg" alt="Shih Tzu">
+        <img src="Assets/Donkeys_butterfield_acres.jpg" alt="Donkeys looking over a fence">
         <div class="card-content">
           <h3 class="subheader">
-            Hypoallergenic Dogs
+            Activity/Entertainment
           </h3>
           <h4 class="header">
-            Shih Tzu
+           Butterfield Acres 
           </h4>
           <p class="paragraph">
-            “The majestic Shih Tzus, often referred to as "lion dogs," trace their roots back to the era of the Tang Dynasty. <br/>
-            A single glance is enough to fathom why these breeds, with their noble yet minimal-shedding appearance and enchanting, <br/>
-            sociable demeanor, were once the favorites of royalty.”<br/>
+            Butterfield Acres in Calgary is a family-friendly farmyard experience that offers hands-on interaction with farm animals 
+            and outdoor activities. It's designed to provide children with a fun and educational experience in a farm setting. 
+            Visitors can participate in various activities such as feeding and petting farm animals like goats, sheep, pigs, and chickens. 
+            There are also pony rides, tractor-pulled hayrides, and opportunities to learn about agriculture and animal care through 
+            interactive demonstrations and guided tours. 
           </p>
         </div>
       </li>
-      <li class="card">
-        <img src="assetslab3/Scottish-Terrier-min.jpg" alt="Scottish Terrier">
-        <div class="card-content">
-          <h3 class="subheader">
-            Hypoallergenic Dogs
-          </h3>
-          <h4 class="header">
-            Scottish Terrier
-          </h4>
-          <p class="paragraph">
-            “However, these independent and occasionally headstrong dogs also make wonderful companions in real life. <br/>
-            Originally bred to be tenacious hunters, their coarse, weather-proof fur kept them safe in various weather conditions.”<br/>
-          </p>
-        </div>
-      </li>
-      <li class="card">
-        <img src="assetslab3/Havanese-min.jpg" alt="Havanese">
-        <div class="card-content">
-          <h3 class="subheader">
-            Hypoallergenic Dogs
-          </h3>
-          <h4 class="header">
-            Havanese
-          </h4>
-          <p class="paragraph">
-            “Cheerful and inquisitive, Havanese dogs flaunt glossy, lengthy coats that come in a myriad of colors. <br/>
-            If you allow their low-shedding fur to grow long, they can resemble regality itself, especially if <br/>
-            carried around like the self-perceived monarchs they fancy themselves to be”.<br/>
-          </p>
-        </div>
-      </li>
+
     </ul>
   </section>
  
