final commit before submitting

--- a/AdditionalEvents.html
+++ b/AdditionalEvents.html
@@ -6,12 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/global.css">
   <link rel="stylesheet" type="text/css" href="styles/AccordianStyle.css">
+  <script defer src="source/accordion-code.js"></script>
+  <script defer src="source/footer-code.js"></script>
   <title>Responsive, Static Website</title>
 </head>
 <body>
   <section id="Hero Banner" class="hero-container">
       <h1>Calgary Events</h1>
       <h3>Discover the beauty that Calgary has to offer while having fun</h3>
+  </section>
+  <section id="Site Navigation" class="site-nav">
+    <ul >
+      <li><a href="index.html">Home</a></li>
+      <li><a href="Top9Events.html">Top 9 Events</a></li>
+      <li><a class="current" href="AdditionalEvents.html">Additional Events</a></li>
+    </ul>
   </section>
   <h1>Additional Events</h1>
   <section id="accordian" class="container accordion-container">
@@ -21,7 +30,7 @@
         Folk Music Festival. Also brings around big names in country at Country Thunder, it is an electrifying country music festival that 
         brings together top artists, passionate fans, and a lively atmosphere for a weekend of unforgettable performances and camaraderie.
     </p>
-    <a href="https://www.visitcalgary.com/things-to-do/stories-from-calgary/festivals-in-calgary"></a>
+    <a href="https://www.visitcalgary.com/things-to-do/stories-from-calgary/festivals-in-calgary">Visit Calgary: Festivals in Calgary Article Link</a>
     </div>
     
     <button class="accordion">Concerts 2024</button>
@@ -29,7 +38,7 @@
       <p> The Coke Stage at the Calgary Stampede is a pulsating hub of live entertainment, featuring an eclectic lineup of 
           musical acts that captivate audiences with their dynamic performances and energetic atmosphere. 
       </p>
-      <a href="https://www.ticketmaster.ca/discover/concerts/calgary"></a>
+      <a href="https://www.ticketmaster.ca/discover/concerts/calgary">Ticket Master Concert Listings Link</a>
     </div>
     
     <button class="accordion">Dining Experience</button>
@@ -37,8 +46,8 @@
     <p> A popular trend that happens year-round is Dining under the starts, a dinning experience where are 
         in a temperature controlled transparent igloo where you can see the night sky while dining with various restaurants.
     </p>
-    <a href="https://bvrrestaurant.com/dome-dining/romantic-dome-dining/"></a>
-    <a href="https://www.albertamamas.com/dinner-under-the-stars-in-calgary/"></a>
+    <a href="https://bvrrestaurant.com/dome-dining/romantic-dome-dining/">Comapy Romantic Dome Dinning Link</a>
+    <a href="https://www.albertamamas.com/dinner-under-the-stars-in-calgary/">Dining under the stars Blog Link</a>
     </div>
   </section>
 
