--- a/Top9Events.html
+++ b/Top9Events.html
@@ -6,12 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/global.css">
   <link rel="stylesheet" type="text/css" href="styles/Events.css">
+  <script defer src="source/footer-code.js"></script>
   <title>Responsive, Static Website</title>
 </head>
 <body>
   <section id="Hero Banner" class="hero-container">
       <h1>Calgary Events</h1>
       <h3>Discover the beauty that Calgary has to offer while having fun</h3>
+  </section>
+  <section id="Site Navigation" class="site-nav">
+    <ul >
+      <li><a href="index.html">Home</a></li>
+      <li><a class="current" href="Top9Events.html">Top 9 Events</a></li>
+      <li><a href="AdditionalEvents.html">Additional Events</a></li>
+    </ul>
   </section>
 
   <section class="container">
@@ -28,10 +36,12 @@
           <p class="paragraph">
             Floating on the Bow River in Calgary offers a refreshing and scenic way to experience the city's natural beauty. Participants typically rent 
             inflatable rafts, tubes, or kayaks and leisurely float along the river, taking in views of  downtown Calgary, lush riverbanks, and nearby parks.
+        </p>
+        <a href="https://www.calgary.ca/safety/river-floating.html">City of Calgary floating Safety Link</a>
         </div>
       </li>
       <li class="card">
-        <img src="Assets/Bucking_Bronco_Stampede.jpg" alt="Labradoodle">
+        <img src="Assets/Bucking_Bronco_Stampede.jpg" alt="Cowboy riding a Bucking Bronco at a rodeo">
         <div class="card-content">
           <h3 class="subheader">
            Activity/Shopping/Entertainment/Food
@@ -44,8 +54,9 @@
             Attracts over a million visitors each year. It features a wide array of events and attractions, 
             including professional rodeo competitions, chuckwagon races, agricultural exhibits, live music concerts, carnival rides, 
             and a variety of food vendors offering everything from traditional western fare to international cuisine, parades, fireworks display, 
-            and cultural showcases
+            and cultural showcases.
           </p>
+          <a href="https://www.calgarystampede.com/">Calgary Stampede Official Site Link</a>
         </div>
       </li>
       <li class="card">
@@ -63,6 +74,7 @@
             activities along 4th Street SW, which is transformed into a bustling pedestrian promenade for the day. The festival's 
             centerpiece is the blooming of thousands of lilac bushes that line the street
           </p>
+          <a href="https://lilacfestival.net/">Official Lilac Festival Link</a>
         </div>
       </li>
       <li class="card">
@@ -80,6 +92,7 @@
             countries, providing an immersive experience in global culture.international fireworks competition, where teams from different countries 
             compete to create stunning pyrotechnic displays synchronized with music.
           </p>
+          <a href="https://globalfest.ca/">Official Global Fest Link</a>
         </div>
       </li>
       <li class="card">
@@ -97,6 +110,7 @@
             iconic ski jumps and stunning mountain scenery. The experience provides breathtaking views of the surrounding 
             landscape while delivering an adrenaline rush. 
           </p>
+          <a href=" https://www.tripadvisor.ca/AttractionProductReview-g154913-d11455445-Zipline_Adventure_in_Calgary-Calgary_Alberta.html">Trip Advisor Link</a>
         </div>
       </li>
       <li class="card">
@@ -114,6 +128,7 @@
             environment of polar bears, complete with rocky terrain, pools for swimming, and ample space for exploration. 
             Visitors can observe polar bears up close as they swim, play, and interact with each other.
           </p>
+          <a href="https://www.calgaryzoo.com/wildcanada/?gad_source=1&gclid=CjwKCAjw7-SvBhB6EiwAwYdCAcEODm5u0pH-3cRQDoA6Pu1CscLAy6Friyf4NfKnFyNW78OGZwjV2BoCTuEQAvD_BwE&gclsrc=aw.ds&utm_source=loknow&utm_medium=search&utm_campaign=wildcanada">Official Calgary Zoo Link</a>
         </div>
       </li>
       <li class="card">
@@ -131,6 +146,7 @@
             handmade crafts, and unique culinary treats.The farmers' markets in Calgary often take place year-round, with indoor and outdoor 
             locations available, allowing people to enjoy fresh, seasonal goods regardless of the weather. 
           </p>
+          <a href="https://www.avenuecalgary.com/restaurants-food/farmers-markets-in-and-around-calgary/">Avenue Magazine Article Link</a>
         </div>
       </li>
       <li class="card">
@@ -150,6 +166,7 @@
             Highlights include a working steam train, a recreated frontier town with shops and businesses, a First Nations encampment, 
             and a vintage midway with rides and games. 
           </p>
+          <a href="https://heritagepark.ca/membership/?gad_source=1&gclid=CjwKCAjw7-SvBhB6EiwAwYdCAfTNj_9kb8yLsFW36sL4dtxVFZXXYpWEIXwn24JBOHGPGBwYQOJmjhoC1eYQAvD_BwE">Official Heritage Park Link</a>
         </div>
       </li>
       <li class="card">
@@ -168,6 +185,7 @@
             There are also pony rides, tractor-pulled hayrides, and opportunities to learn about agriculture and animal care through 
             interactive demonstrations and guided tours. 
           </p>
+          <a href="https://www.butterfieldacres.com/">Official Butterfield Acres Link</a>
         </div>
       </li>
 
