--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/global.css">
+  <script defer src="source/footer-code.js"></script>
   <title>Responsive, Static Website</title>
 </head>
 <body>
   <section id="Hero Banner" class="hero-container">
       <h1>Calgary Events</h1>
       <h3>Discover the beauty that Calgary has to offer while having fun</h3>
+  </section>
+  <section id="Site Navigation" class="site-nav">
+    <ul >
+      <li><a class="current" href="index.html">Home</a></li>
+      <li><a href="Top9Events.html">Top 9 Events</a></li>
+      <li><a href="AdditionalEvents.html">Additional Events</a></li>
+    </ul>
   </section>
 
       <section id="content" class="container content-container">
@@ -25,6 +33,9 @@
         <div>
           <img class="content-image" src="Assets/Calgary_Tower_Content.jpg"></img>
         </div>
+  </section>
+  <section id="video" class="container video-container">
+    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/e3UyFOJ5d3M?si=-C_mI3yNk2ZtbgqH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </section>
  
   <section id="footer" class="footer-container">
