Initial Accessibility changes

--- a/AdditionalEvents.html
+++ b/AdditionalEvents.html
@@ -11,11 +11,11 @@
   <title>Responsive, Static Website</title>
 </head>
 <body>
-  <section id="Hero Banner" class="hero-container">
+  <section id="Hero-Banner" class="hero-container">
       <h1>Calgary Events</h1>
-      <h3>Discover the beauty that Calgary has to offer while having fun</h3>
+      <h2>Discover the beauty that Calgary has to offer while having fun</h2>
   </section>
-  <section id="Site Navigation" class="site-nav">
+  <section id="Site-Navigation" class="site-nav">
     <ul >
       <li><a href="index.html">Home</a></li>
       <li><a href="Top9Events.html">Top 9 Events</a></li>
@@ -69,8 +69,8 @@
     <div class="block footer-block" style="max-width: 25%">
     <p>  
     <h4>About Us</h4>
-    "Stay updated on all the hottest happenings in our city with our vibrant event blog. <br/>
-    From concerts to cultural festivals, we're your ultimate guide to experiencing the pulse of our community."<br/>
+    "Stay updated on all the hottest happenings in our city with our vibrant event blog.
+    From concerts to cultural festivals, we're your ultimate guide to experiencing the pulse of our community."
     </p>
     <p>&copy; Candace K. <span id="year"> </span></p>
     </div>
