--- a/Top9Events.html
+++ b/Top9Events.html
@@ -10,11 +10,11 @@
   <title>Responsive, Static Website</title>
 </head>
 <body>
-  <section id="Hero Banner" class="hero-container">
+  <section id="Hero-Banner" class="hero-container">
       <h1>Calgary Events</h1>
-      <h3>Discover the beauty that Calgary has to offer while having fun</h3>
+      <h2>Discover the beauty that Calgary has to offer while having fun</h2>
   </section>
-  <section id="Site Navigation" class="site-nav">
+  <section id="Site-Navigation" class="site-nav">
     <ul >
       <li><a href="index.html">Home</a></li>
       <li><a class="current" href="Top9Events.html">Top 9 Events</a></li>
@@ -27,9 +27,9 @@
       <li class="card">
         <img src="Assets/Rafters_float_the_bow.jpg" alt="people floating down a river on tubes">
         <div class="card-content">
-          <h3 class="subheader">
+          <h2 class="subheader">
             Activity
-          </h3>
+          </h2>
           <h4 class="header">
             Float the Bow 
         </h4>
@@ -43,9 +43,9 @@
       <li class="card">
         <img src="Assets/Bucking_Bronco_Stampede.jpg" alt="Cowboy riding a Bucking Bronco at a rodeo">
         <div class="card-content">
-          <h3 class="subheader">
+          <h2 class="subheader">
            Activity/Shopping/Entertainment/Food
-          </h3>
+          </h2>
           <h4 class="header">
             Calgary Stampede
           </h4>
@@ -60,11 +60,11 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/outdoor_festival_LilacFest.jpg" alt="Crowds shopping at an outdoor Lilac Festival">
+        <img src="Assets/outdoor_festival_LilacFest.jpg" alt="Crowds shopping at an outdoor market">
         <div class="card-content">
-          <h3 class="subheader">
+          <h2 class="subheader">
             Shopping/Entertainment/Food
-          </h3>
+          </h2>
           <h4 class="header">
             4th Street Lilac Festival
           </h4>
@@ -80,9 +80,9 @@
       <li class="card">
         <img src="Assets/fireworks_global_fest.jpg" alt="people watching Fireworks display over a pond">
         <div class="card-content">
-          <h3 class="subheader">
+          <h2 class="subheader">
             Entertainment/Food
-          </h3>
+          </h2>
           <h4 class="header">
             Global Fest
           </h4>
@@ -96,11 +96,11 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/zipliner_cop.jpg" alt="Person swinging down a zipline">
+        <img src="Assets/zipliner_cop.jpg" alt="Person swinging down a zipline next to some tree tops">
         <div class="card-content">
-          <h3 class="subheader">
+          <h2 class="subheader">
             Activity
-          </h3>
+          </h2>
           <h4 class="header">
             Zipline at Canada Olympic Park
           </h4>
@@ -114,11 +114,11 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/Polar_bear_zoo.jpg" alt="Polar Bear walking around an enclosure">
+        <img src="Assets/Polar_bear_zoo.jpg" alt="Polar Bear walking around an enclosure standing on rocky terrain">
         <div class="card-content">
-          <h3 class="subheader">
+          <h2 class="subheader">
             Activity/Entertainment
-          </h3>
+          </h2>
           <h4 class="header">
             Polar Bear Exhibit at the Calgary Zoo
           </h4>
@@ -132,11 +132,11 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/Veg_stand_farmers_market.jpg" alt="Person buying vegetables from a farmers market stall">
+        <img src="Assets/Veg_stand_farmers_market.jpg" alt="Persons hand buying vegetables from another hand with some fruit infront at a market stall">
         <div class="card-content">
-          <h3 class="subheader">
+          <h2 class="subheader">
             Shopping/Entertainment/Food
-          </h3>
+          </h2>
           <h4 class="header">
             Farmers Markets
           </h4>
@@ -150,11 +150,11 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/Horse_pulling_carriage_winter_Heritage_Park.jpg" alt="Horse Pulling a carriage in the winter">
+        <img src="Assets/Horse_pulling_carriage_winter_Heritage_Park.jpg" alt="Horse Pulling a wooden decorated sleigh in the winter">
         <div class="card-content">
-          <h3 class="subheader">
+          <h2 class="subheader">
             Activity/Entertainment/Food/Shopping
-          </h3>
+          </h2>
           <h4 class="header">
             Heritage Park
           </h4>
@@ -170,11 +170,11 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/Donkeys_butterfield_acres.jpg" alt="Donkeys looking over a fence">
+        <img src="Assets/Donkeys_butterfield_acres.jpg" alt="two donkey's one brown looking over a fence and one gray one side eyeing the other">
         <div class="card-content">
-          <h3 class="subheader">
+          <h2 class="subheader">
             Activity/Entertainment
-          </h3>
+          </h2>
           <h4 class="header">
            Butterfield Acres 
           </h4>
@@ -209,8 +209,8 @@
     <div class="block footer-block" style="max-width: 25%">
     <p>  
     <h4>About Us</h4>
-    "Stay updated on all the hottest happenings in our city with our vibrant event blog. <br/>
-    From concerts to cultural festivals, we're your ultimate guide to experiencing the pulse of our community."<br/>
+    "Stay updated on all the hottest happenings in our city with our vibrant event blog.
+    From concerts to cultural festivals, we're your ultimate guide to experiencing the pulse of our community."
     </p>
     <p>&copy; Candace K. <span id="year"> </span></p>
     </div>
