additional accessibilities changes

--- a/AdditionalEvents.html
+++ b/AdditionalEvents.html
@@ -15,15 +15,15 @@
       <h1>Calgary Events</h1>
       <h2>Discover the beauty that Calgary has to offer while having fun</h2>
   </section>
-  <section id="Site-Navigation" class="site-nav">
+  <div id="Site-Navigation" class="site-nav">
     <ul >
       <li><a href="index.html">Home</a></li>
       <li><a href="Top9Events.html">Top 9 Events</a></li>
       <li><a class="current" href="AdditionalEvents.html">Additional Events</a></li>
     </ul>
-  </section>
-  <h1>Additional Events</h1>
-  <section id="accordian" class="container accordion-container">
+  </div>
+  <h3>Additional Events</h3>
+  <div id="accordian" class="container accordion-container">
     <button class="accordion">Festivals 2024</button>
     <div class="panel">
       <p>Calgary's thriving arts community showcases its talent through events like the Calgary International Film Festival and the Calgary 
@@ -49,7 +49,7 @@
     <a href="https://bvrrestaurant.com/dome-dining/romantic-dome-dining/">Comapy Romantic Dome Dinning Link</a>
     <a href="https://www.albertamamas.com/dinner-under-the-stars-in-calgary/">Dining under the stars Blog Link</a>
     </div>
-  </section>
+  </div>
 
  
   <section id="footer" class="footer-container">
@@ -69,7 +69,7 @@
     <div class="block footer-block" style="max-width: 25%">
     <p>  
     <h4>About Us</h4>
-    "Stay updated on all the hottest happenings in our city with our vibrant event blog.
+    <p>"Stay updated on all the hottest happenings in our city with our vibrant event blog.
     From concerts to cultural festivals, we're your ultimate guide to experiencing the pulse of our community."
     </p>
     <p>&copy; Candace K. <span id="year"> </span></p>
