--- a/Top9Events.html
+++ b/Top9Events.html
@@ -14,13 +14,13 @@
       <h1>Calgary Events</h1>
       <h2>Discover the beauty that Calgary has to offer while having fun</h2>
   </section>
-  <section id="Site-Navigation" class="site-nav">
+  <div id="Site-Navigation" class="site-nav">
     <ul >
       <li><a href="index.html">Home</a></li>
       <li><a class="current" href="Top9Events.html">Top 9 Events</a></li>
       <li><a href="AdditionalEvents.html">Additional Events</a></li>
     </ul>
-  </section>
+  </div>
 
   <section class="container">
     <ul class="card-container">
@@ -30,9 +30,9 @@
           <h2 class="subheader">
             Activity
           </h2>
-          <h4 class="header">
+          <h3 class="header">
             Float the Bow 
-        </h4>
+        </h3>
           <p class="paragraph">
             Floating on the Bow River in Calgary offers a refreshing and scenic way to experience the city's natural beauty. Participants typically rent 
             inflatable rafts, tubes, or kayaks and leisurely float along the river, taking in views of  downtown Calgary, lush riverbanks, and nearby parks.
@@ -46,9 +46,9 @@
           <h2 class="subheader">
            Activity/Shopping/Entertainment/Food
           </h2>
-          <h4 class="header">
+          <h3 class="header">
             Calgary Stampede
-          </h4>
+          </h3>
           <p class="paragraph">
             The Calgary Stampede is one of the largest and most iconic rodeo and western festivals in the world, held annually.
             Attracts over a million visitors each year. It features a wide array of events and attractions, 
@@ -65,9 +65,9 @@
           <h2 class="subheader">
             Shopping/Entertainment/Food
           </h2>
-          <h4 class="header">
+          <h3 class="header">
             4th Street Lilac Festival
-          </h4>
+          </h3>
           <p class="paragraph">
             The Lilac Festival in Calgary is an annual event held in late May that celebrates the arrival of spring and showcases 
             the city's vibrant community spirit. It typically features live music, food vendors, artisans, and various family-friendly 
@@ -83,9 +83,9 @@
           <h2 class="subheader">
             Entertainment/Food
           </h2>
-          <h4 class="header">
+          <h3 class="header">
             Global Fest
-          </h4>
+          </h3>
           <p class="paragraph">
             GlobalFest in Calgary is an annual multicultural festival that celebrates cultural diversity through music, food, and 
             fireworks. Held over several evenings in late August. explore pavilions showcasing the music, dance, and cuisine of different 
@@ -101,9 +101,9 @@
           <h2 class="subheader">
             Activity
           </h2>
-          <h4 class="header">
+          <h3 class="header">
             Zipline at Canada Olympic Park
-          </h4>
+          </h3>
           <p class="paragraph">
             The zipline at Canada Olympic Park offers an exhilarating experience for adventure seekers visiting.
             Located at the site of the 1988 Winter Olympics, the zipline allows participants to soar above the park's 
@@ -119,9 +119,9 @@
           <h2 class="subheader">
             Activity/Entertainment
           </h2>
-          <h4 class="header">
+          <h3 class="header">
             Polar Bear Exhibit at the Calgary Zoo
-          </h4>
+          </h3>
           <p class="paragraph">
             The polar bear exhibit at the Calgary Zoo provides visitors with an immersive experience into the Arctic habitat of 
             these magnificent creatures that opened in late 2023. It features a spacious enclosure designed to resemble the natural
@@ -137,9 +137,9 @@
           <h2 class="subheader">
             Shopping/Entertainment/Food
           </h2>
-          <h4 class="header">
+          <h3 class="header">
             Farmers Markets
-          </h4>
+          </h3>
           <p class="paragraph">
             The farmers' markets in Calgary offer a diverse and vibrant shopping experience for residents and visitors alike. 
             These markets typically feature a wide variety of fresh produce, locally sourced meats, artisanal cheeses, baked goods, 
@@ -155,9 +155,9 @@
           <h2 class="subheader">
             Activity/Entertainment/Food/Shopping
           </h2>
-          <h4 class="header">
+          <h3 class="header">
             Heritage Park
-          </h4>
+          </h3>
           <p class="paragraph">
             Heritage Park in Calgary is a living history museum that offers visitors a glimpse into Western Canada's past. 
             Spread over 127 acres, the park features over 180 exhibits and attractions, including historical buildings, 
@@ -175,9 +175,9 @@
           <h2 class="subheader">
             Activity/Entertainment
           </h2>
-          <h4 class="header">
+          <h3 class="header">
            Butterfield Acres 
-          </h4>
+          </h3>
           <p class="paragraph">
             Butterfield Acres in Calgary is a family-friendly farmyard experience that offers hands-on interaction with farm animals 
             and outdoor activities. It's designed to provide children with a fun and educational experience in a farm setting. 
@@ -209,7 +209,7 @@
     <div class="block footer-block" style="max-width: 25%">
     <p>  
     <h4>About Us</h4>
-    "Stay updated on all the hottest happenings in our city with our vibrant event blog.
+    <p>"Stay updated on all the hottest happenings in our city with our vibrant event blog.
     From concerts to cultural festivals, we're your ultimate guide to experiencing the pulse of our community."
     </p>
     <p>&copy; Candace K. <span id="year"> </span></p>
