--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/global.css">
+  <link rel="stylesheet" type="text/css" href="styles/home.css">
   <script defer src="source/footer-code.js"></script>
   <title>Responsive, Static Website</title>
 </head>
@@ -23,7 +24,7 @@
 
       <section id="content" class="container content-container">
         <div class="Market-Link">
-          <h1>Why Calgary?</h1>
+          <h3>Why Calgary?</h3>
           <p>Calgary is renowned for its world-class events, including the Calgary Stampede, an iconic rodeo and western festival attracting millions of visitors annually, 
             and GlobalFest, a multicultural extravaganza featuring international fireworks competitions and cultural showcases. 
             Outdoor enthusiasts can explore the city's extensive network of parks and trails, with events such as the Lilac Festival and ziplining at Canada Olympic Park offering unique experiences in Calgary's urban and natural landscapes. 
@@ -31,18 +32,18 @@
         </p>
         </div>
         <div>
-          <img class="content-image" src="Assets/Calgary_Tower_Content.jpg" alt="sepia color layer over the Calgary Tower, white stalk with iconic red top with windows"/>
+          <img class="content-image" src="Assets/Calgary_Tower_Content.jpg" alt="sepia color layer over the Calgary Tower, white stalk with iconic red top with windows">
         </div>
   </section>
   <div id="video" class="container video-container">
-    <iframe class="video" src="https://www.youtube.com/embed/e3UyFOJ5d3M?si=-C_mI3yNk2ZtbgqH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe class="video" src="https://www.youtube.com/embed/e3UyFOJ5d3M?si=-C_mI3yNk2ZtbgqH" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
  
-  <div id="footer" class="footer-container">
+  <section id="footer" class="footer-container">
     <div class="block footer-block">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d321200.71227947116!2d-114.41747661991604!3d51.02759155127005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537170039f843fd5%3A0x266d3bb1b652b63a!2sCalgary%2C%20AB!5e0!3m2!1sen!2sca!4v1710868455463!5m2!1sen!2sca" width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" alt="city of calgary outlined on google map search" title: City of Calgary searched in google maps></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d321200.71227947116!2d-114.41747661991604!3d51.02759155127005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537170039f843fd5%3A0x266d3bb1b652b63a!2sCalgary%2C%20AB!5e0!3m2!1sen!2sca!4v1710868455463!5m2!1sen!2sca" width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map of Calgary"></iframe>
    </div>
-    <section class="block-footer-block">
+    <div class="block-footer-block">
       <ul>
       <li><a href="index.html"> Home </a>
       </li>
@@ -58,7 +59,7 @@
     From concerts to cultural festivals, we're your ultimate guide to experiencing the pulse of our community."
     </p>
     <p>&copy; Candace K. <span id="year"> </span></p>
-  </section>
   </div>
+</section>
 </body>
 </html>
