additional accessibility editing and new optomized images inputs

--- a/Top9Events.html
+++ b/Top9Events.html
@@ -25,7 +25,7 @@
   <section class="container">
     <ul class="card-container">
       <li class="card">
-        <img src="Assets/Rafters_float_the_bow.jpg" alt="people floating down a river on tubes">
+        <img src="Optimized photos assets/Rafters_float_the_bow-min.jpg" alt="people floating down a river on tubes">
         <div class="card-content">
           <h2 class="subheader">
             Activity
@@ -41,7 +41,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/Bucking_Bronco_Stampede.jpg" alt="Cowboy riding a Bucking Bronco at a rodeo">
+        <img src="Optimized photos assets/Bucking_Bronco_Stampede-min.jpg" alt="Cowboy riding a Bucking Bronco at a rodeo">
         <div class="card-content">
           <h2 class="subheader">
            Activity/Shopping/Entertainment/Food
@@ -60,7 +60,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/outdoor_festival_LilacFest.jpg" alt="Crowds shopping at an outdoor market">
+        <img src="Optimized photos assets/outdoor_festival_LilacFest-min.jpg" alt="Crowds shopping at an outdoor market with various stalls">
         <div class="card-content">
           <h2 class="subheader">
             Shopping/Entertainment/Food
@@ -78,7 +78,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/fireworks_global_fest.jpg" alt="people watching Fireworks display over a pond">
+        <img src="Optimized photos assets/fireworks_global_fest-min.jpg" alt="people watching multicolored Fireworks display over a pond">
         <div class="card-content">
           <h2 class="subheader">
             Entertainment/Food
@@ -96,7 +96,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/zipliner_cop.jpg" alt="Person swinging down a zipline next to some tree tops">
+        <img src="Optimized photos assets/zipliner_cop-min.jpg" alt="Person swinging down a zipline next to some tree tops">
         <div class="card-content">
           <h2 class="subheader">
             Activity
@@ -114,7 +114,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/Polar_bear_zoo.jpg" alt="Polar Bear walking around an enclosure standing on rocky terrain">
+        <img src="Optimized photos assets/Polar_bear_zoo-min.jpg" alt="Polar Bear walking around an enclosure standing on rocky terrain">
         <div class="card-content">
           <h2 class="subheader">
             Activity/Entertainment
@@ -132,7 +132,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/Veg_stand_farmers_market.jpg" alt="Persons hand buying vegetables from another hand with some fruit infront at a market stall">
+        <img src="Optimized photos assets/Veg_stand_farmers_market-min.jpg" alt="Persons hand buying vegetables from another hand with some fruit infront at a market stall">
         <div class="card-content">
           <h2 class="subheader">
             Shopping/Entertainment/Food
@@ -150,7 +150,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/Horse_pulling_carriage_winter_Heritage_Park.jpg" alt="Horse Pulling a wooden decorated sleigh in the winter">
+        <img src="Optimized photos assets/Horse_pulling_carriage_winter_Heritage_Park-min.jpg" alt="Horse Pulling a wooden decorated sleigh in the winter">
         <div class="card-content">
           <h2 class="subheader">
             Activity/Entertainment/Food/Shopping
@@ -170,7 +170,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Assets/Donkeys_butterfield_acres.jpg" alt="two donkey's one brown looking over a fence and one gray one side eyeing the other">
+        <img src="Optimized photos assets/Donkeys_butterfield_acres-min.jpg" alt="two donkey's one brown looking over a fence and one gray one side eyeing the other">
         <div class="card-content">
           <h2 class="subheader">
             Activity/Entertainment
@@ -193,10 +193,10 @@
   </section>
  
   <section id="footer" class="footer-container">
-    <div class="block footer-block">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d321200.71227947116!2d-114.41747661991604!3d51.02759155127005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537170039f843fd5%3A0x266d3bb1b652b63a!2sCalgary%2C%20AB!5e0!3m2!1sen!2sca!4v1710868455463!5m2!1sen!2sca" width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="footer-block map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d321200.71227947116!2d-114.41747661991604!3d51.02759155127005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537170039f843fd5%3A0x266d3bb1b652b63a!2sCalgary%2C%20AB!5e0!3m2!1sen!2sca!4v1710868455463!5m2!1sen!2sca" width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map of Calgary"></iframe>
    </div>
-    <div class="block footer-block">
+    <div class="footer-block">
         <ul>
             <li><a href="index.html"> Home </a>
             </li>
@@ -206,7 +206,7 @@
             </li>
         </ul>
     </div>
-    <div class="block footer-block" style="max-width: 25%">
+    <div class="footer-block about-us">
     <p>  
     <h4>About Us</h4>
     <p>"Stay updated on all the hottest happenings in our city with our vibrant event blog.
