--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </p>
         </div>
         <div>
-          <img class="content-image" src="Assets/Calgary_Tower_Content.jpg" alt="sepia color layer over the Calgary Tower, white stalk with iconic red top with windows">
+          <img class="content-image" src="Optimized photos assets/Calgary_Tower_Content-min.jpg" alt="sepia color layer over the Calgary Tower, white stalk with iconic red top with windows">
         </div>
   </section>
   <div id="video" class="container video-container">
@@ -40,26 +40,27 @@
   </div>
  
   <section id="footer" class="footer-container">
-    <div class="block footer-block">
+    <div class="footer-block map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d321200.71227947116!2d-114.41747661991604!3d51.02759155127005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537170039f843fd5%3A0x266d3bb1b652b63a!2sCalgary%2C%20AB!5e0!3m2!1sen!2sca!4v1710868455463!5m2!1sen!2sca" width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map of Calgary"></iframe>
    </div>
-    <div class="block-footer-block">
-      <ul>
-      <li><a href="index.html"> Home </a>
-      </li>
-      <li><a href= "Top9Events.html"> Top 9 Events </a>
-      </li>
-      <li><a href="AdditionalEvents.html"> Additional Events </a>
-      </li>
-    </ul>
+    <div class="footer-block">
+        <ul>
+            <li><a href="index.html"> Home </a>
+            </li>
+            <li><a href="Top9Events.html"> Top 9 Events </a>
+            </li>
+            <li><a href="AdditionalEvents.html"> Additional Events </a>
+            </li>
+        </ul>
     </div>
-    <div class="block-footer-block" style="max-width: 25%"> 
+    <div class="footer-block about-us">
+    <p>  
     <h4>About Us</h4>
-    <p>"Stay updated on all the hottest happenings in our city with our vibrant event blog. 
+    <p>"Stay updated on all the hottest happenings in our city with our vibrant event blog.
     From concerts to cultural festivals, we're your ultimate guide to experiencing the pulse of our community."
     </p>
     <p>&copy; Candace K. <span id="year"> </span></p>
-  </div>
-</section>
+    </div>
+  </section>
 </body>
 </html>
