image optimization changes

--- a/Top9Events.html
+++ b/Top9Events.html
@@ -25,7 +25,7 @@
   <section class="container">
     <ul class="card-container">
       <li class="card">
-        <img src="Optimized photos assets/Rafters_float_the_bow-min.jpg" alt="people floating down a river on tubes">
+        <img src="Optimized-photos-assets/Rafters_float_the_bow-min.jpg" alt="people floating down a river on tubes">
         <div class="card-content">
           <h2 class="subheader">
             Activity
@@ -41,7 +41,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Optimized photos assets/Bucking_Bronco_Stampede-min.jpg" alt="Cowboy riding a Bucking Bronco at a rodeo">
+        <img src="Optimized-photos-assets/Bucking_Bronco_Stampede-min.jpg" alt="Cowboy riding a Bucking Bronco at a rodeo">
         <div class="card-content">
           <h2 class="subheader">
            Activity/Shopping/Entertainment/Food
@@ -60,7 +60,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Optimized photos assets/outdoor_festival_LilacFest-min.jpg" alt="Crowds shopping at an outdoor market with various stalls">
+        <img src="Optimized-photos-assets/outdoor_festival_LilacFest-min.jpg" alt="Crowds shopping at an outdoor market with various stalls">
         <div class="card-content">
           <h2 class="subheader">
             Shopping/Entertainment/Food
@@ -78,7 +78,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Optimized photos assets/fireworks_global_fest-min.jpg" alt="people watching multicolored Fireworks display over a pond">
+        <img src="Optimized-photos-assets/fireworks_global_fest-min.jpg" alt="people watching multicolored Fireworks display over a pond">
         <div class="card-content">
           <h2 class="subheader">
             Entertainment/Food
@@ -96,7 +96,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Optimized photos assets/zipliner_cop-min.jpg" alt="Person swinging down a zipline next to some tree tops">
+        <img src="Optimized-photos-assets/zipliner_cop-min.jpg" alt="Person swinging down a zipline next to some tree tops">
         <div class="card-content">
           <h2 class="subheader">
             Activity
@@ -114,7 +114,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Optimized photos assets/Polar_bear_zoo-min.jpg" alt="Polar Bear walking around an enclosure standing on rocky terrain">
+        <img src="Optimized-photos-assets/Polar_bear_zoo-min.jpg" alt="Polar Bear walking around an enclosure standing on rocky terrain">
         <div class="card-content">
           <h2 class="subheader">
             Activity/Entertainment
@@ -132,7 +132,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Optimized photos assets/Veg_stand_farmers_market-min.jpg" alt="Persons hand buying vegetables from another hand with some fruit infront at a market stall">
+        <img src="Optimized-photos-assets/Veg_stand_farmers_market-min.jpg" alt="Persons hand buying vegetables from another hand with some fruit infront at a market stall">
         <div class="card-content">
           <h2 class="subheader">
             Shopping/Entertainment/Food
@@ -150,7 +150,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Optimized photos assets/Horse_pulling_carriage_winter_Heritage_Park-min.jpg" alt="Horse Pulling a wooden decorated sleigh in the winter">
+        <img src="Optimized-photos-assets/Horse_pulling_carriage_winter_Heritage_Park-min.jpg" alt="Horse Pulling a wooden decorated sleigh in the winter">
         <div class="card-content">
           <h2 class="subheader">
             Activity/Entertainment/Food/Shopping
@@ -170,7 +170,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="Optimized photos assets/Donkeys_butterfield_acres-min.jpg" alt="two donkey's one brown looking over a fence and one gray one side eyeing the other">
+        <img src="Optimized-photos-assets/Donkeys_butterfield_acres-min.jpg" alt="two donkey's one brown looking over a fence and one gray one side eyeing the other">
         <div class="card-content">
           <h2 class="subheader">
             Activity/Entertainment
