--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </p>
         </div>
         <div>
-          <img class="content-image" src="Optimized photos assets/Calgary_Tower_Content-min.jpg" alt="sepia color layer over the Calgary Tower, white stalk with iconic red top with windows">
+          <img class="content-image" src="Optimized-photos-assets/Calgary_Tower_Content-min.jpg" alt="sepia color layer over the Calgary Tower, white stalk with iconic red top with windows">
         </div>
   </section>
   <div id="video" class="container video-container">
